# lockchain

./: Cargo.toml  PLANNING  README.md
lockchain-android/gradle/wrapper/: gradle-wrapper.properties
lockchain-android/mobile/: build.gradle
lockchain-android/mobile/src/androidTest/java/de/spacekookie/lockchain/: ExampleInstrumentedTest.kt
lockchain-android/mobile/src/main/: AndroidManifest.xml
lockchain-android/mobile/src/main/cpp/: native-lib.cpp
lockchain-android/mobile/src/main/java/de/spacekookie/lockchain/: MainActivity.kt  MainActivityFragment.kt
lockchain-android/mobile/src/main/res/layout/: content_main.xml
lockchain-android/mobile/src/main/res/menu/: menu_main.xml
lockchain-android/mobile/src/main/res/values/: strings.xml
lockchain-android/mobile/src/test/java/de/spacekookie/lockchain/: ExampleUnitTest.kt
lockchain-android/wear/: build.gradle
lockchain-android/wear/src/main/: AndroidManifest.xml
lockchain-android/wear/src/main/java/de/spacekookie/lockchain/: MainActivity.kt
lockchain-android/wear/src/main/res/values/: strings.xml
lockchain-cli/: Cargo.toml
lockchain-client/: Cargo.toml  README.md
lockchain-core/: Cargo.toml  README.md
lockchain-core/examples/: simple_create.rs  user_registry.rs
lockchain-core/lockchain-crypto/: Cargo.toml
lockchain-core/lockchain-files/: Cargo.toml
lockchain-core/src/: auth.rs  crypto.rs  errors.rs  init.rs  initialise.rs  lib.rs  meta.rs  record.rs  traits.rs  users.rs  vault.rs
lockchain-core/src/crypto/: data.rs  encoding.rs  hashing.rs  keys.rs  keystore.rs  mod.rs  random.rs  secrets.rs  store.rs  utils.rs
lockchain-core/src/crypto/passwords/: mod.rs
lockchain-core/src/crypto/utils/: encoding.rs  mod.rs
lockchain-core/src/errors/: auth.rs  crypto.rs  data.rs  mod.rs  vault.rs
lockchain-core/src/security/: crypto.rs  keys.rs  mod.rs  utils.rs
lockchain-core/src/test/: serialize.rs
lockchain-core/src/users/: auth.rs  keystore.rs  mod.rs  rights.rs  secrets.rs  store.rs  tokens.rs  user.rs  userstore.rs
lockchain-crypto/: Cargo.toml  README.md
lockchain-crypto/src/: data.rs  databody.rs  engine.rs  keyfold.rs  lib.rs
lockchain-files/: Cargo.toml  README.md
lockchain-files/examples/: create.rs
lockchain-files/src/: config.rs  create.rs  fs.rs  lib.rs  load.rs  storage.rs  userstore.rs  utils.rs
lockchain-files/src/fs/: mod.rs  primitive.rs
lockchain-gtk/: Cargo.toml
lockchain-http/: Cargo.toml  README.md
lockchain-http/examples/: simple-http.rs
lockchain-http/src/: handlers.rs  impl.rs  lib.rs  main.rs  model.rs  state.rs
lockchain-http/src/models/: inputs.rs  mod.rs  responses.rs
lockchain-receiver/: Cargo.toml
lockchain-server/: Cargo.toml  README.md
lockchain-server/src/: main.rs
lockchain-store/: Cargo.toml
src/: lib.rs  main.rs  record.rs  vault.rs  version.rs
src/api/: mod.rs  rest.rs
src/crypto/: encoding.rs  engine.rs  mod.rs  random.rs
src/record/: mod.rs  version.rs
src/security/: aes.rs  crypto.rs  encoding.rs  encryption.rs  engine.rs  hash.rs  key.rs  keys.rs  mod.rs  random.rs  utils.rs
src/test/: crypto.rs  mod.rs  serialize.rs
src/vault/: crypto.rs  management.rs  mod.rs  record.rs  user.rs
src/vault/crypto/: decoding.rs  encoding.rs  hashing.rs  mod.rs
