[package]
name = "lockchain"
version = "0.1.0"
authors = ["Katharina Fey <kookie@spacekookie.de>"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
generic-array = "0.9.0"

# Cryptography
ring = "0.12.1"
aesni = "0.2.1"
base64 = "0.8.0"
blake2 = "0.7"