[package]
name = "lockchain-core"
description = "The core library that handles lockchain vaults and records"
docs = "https://docs.rs/lockchain-core"
website = "https://github.com/spacekookie/lockchain/tree/master/lockchain-core"
readme = "README.md"
license = "MIT/X11 OR Apache-2.0"
version = "0.2.0"
authors = ["Katharina Fey <kookie@spacekookie.de>"]

[dependencies]
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
ordermap = "0.3"

# Cryptography
miscreant = "0.4.0-beta"
base64 = "0.8"
blake2 = "0.7"
pwhash = "0.1"
rand = "0.3"

# Serialisation
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"