[package]
name = "lockchain-core"
description = "Provides common abstractions for the lockchain crate ecoystem"
documentation = "https://docs.rs/lockchain-core"
homepage = "https://github.com/spacekookie/lockchain/tree/master/lockchain-core"
readme = "README.md"
license = "GPL-3.0"
version = "0.9.1-alpha.0"
authors = ["Katharina Fey <kookie@spacekookie.de>"]
edition = "2018"

[dependencies]
indexmap = { version = "1.0", features = ["serde-1"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

nix = "0.13"
pam = "0.7"

base64 = "0.10"
bcrypt = "0.4"
rand = "0.4"
blake2 = "0.7"
keybob = "0.3"
