[package]
name = "lockchain-crypto"
description = "Small shim layer crate for cryptographic operations on lockchain data records"
documentation = "https://docs.rs/lockchain-crypto"
homepage = "https://github.com/spacekookie/lockchain/tree/master/lockchain-crypto"
readme = "README.md"
license = "GPL-3.0"
version = "0.8.1-alpha.0"
authors = ["Katharina Fey <kookie@spacekookie.de>"]
edition = "2018"

[dependencies]
lockchain-core = { version = "0.9.1-alpha.0", path = "../lockchain-core" }
serde = { version = "1.0", features = ["derive"] }

miscreant = { version = "0.4", features = ["soft-aes"] }